<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="text">text</string>
    <string name="title_activity__second" translatable="false">Activity_Second</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_navigation_" translatable="false">Navigation</string>
    <string name="web_client_id" translatable="false" tools:ignore="TypographyDashes">835332702946-4mif8a4fau4f5enan3sanv4ok95cu052.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">298955144002052</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb298955144002052</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="import_item">Main Page</string>
    <string name="gallery_item">ArtGallery</string>
    <string name="slideshow_item" translatable="false">Slideshow</string>
    <string name="tools_item">Tools</string>
    <string name="about_us">About Us</string>
    <string name="communicate_item" translatable="false">Communicate</string>
    <string name="share_item">Share</string>
    <string name="send_item">Send</string>
    <string name="invitation_message" translatable="false">Hey there</string>
    <string name="invitation_deep_link" translatable="false">https://drive.google.com/drive/my-drive</string>
    <string name="invitation_custom_image" translatable="false">Hey</string>
    <string name="invitation_cta" translatable="false">Hey</string>
    <string name="invitation_title" translatable="false">Hey</string>
    <string name="loading">Loading</string>
    <string name="app_names">iBeacon</string>
    <string name="app_name">iBeacon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main_page">Main Page</string>
    <string name="title_activity_art_gallery">Art Gallery</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_about_us">About us</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_central">Menu</string>
    <string name="text_change">Change Language</string>
    <string name="act1">The Scream</string>
    <string name="act2">Starry Night</string>
    <string name="act3">Blue Dancers</string>
    <string name="act4">Persistence of Memory</string>
    <string name="act5">Old Guitarist</string>
    <string name="share_invate">We are just starting out, so please share our project with your friends
So just click on the button below
Thanks</string>
    <string name="button_load_grades">Load info</string>
    <string name="text_student_info">Info...</string>
    <string name="start_txt">We are just starting out</string>
    <string name="start_txt1">So please share our project with your friends</string>
    <string name="start_txt2">Just click on the button below</string>
    <string name="start_txt3">Thanks</string>
    <string name="title_register">REGISTER</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_re_password">Re-type password</string>
    <string name="text_email">Email</string>
    <string name="text_checkbox">I agree to the Terms of Service</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_login">Login</string>
    <string name="text_checkbox_remember">Remember me</string>
    <string name="text_forgot_pass">Forgot password?</string>
    <string name="text_art_gallery_edvard_munch">Edvard Munch
The Scream , 1893</string>
    <string name="text_art_gallery_van_gogh">Vincent van Gogh
Starry Night , 1889</string>
    <string name="text_art_gallery_edgar_degas">Edgar Degas
Blue Dancers , 1897</string>
    <string name="text_art_gallery_salvador_dali">Salvador Dali
The Persistence of Memory , 1931</string>
    <string name="text_art_gallery_pablo_picasso">Pablo Picasso
The Old Guitarist , 1903</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">display name</string>
    <string name="pref_default_display_name" translatable="false">Vlad Bobrovsky</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
</resources>