<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Sign_Up">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        app:cardCornerRadius="10sp"
        app:cardElevation="3sp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearLayoutS_U"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/color_img_register"
                android:gravity="center">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:padding="9sp"
                    android:src="@drawable/img_register_white"
                    android:tint="@color/white"
                    android:background="@drawable/circle1"
                    android:layout_marginTop="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/title_register"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageViewS_U"
                android:src="@drawable/square"
                android:rotation="45"
                android:layout_below="@+id/linearLayoutS_U"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10sp"
                android:layout_width="20sp"
                android:layout_height="20sp" />
            <RelativeLayout
                android:id="@+id/relativeLay1"
                android:layout_below="@+id/imageViewS_U"
                android:layout_width="match_parent"
                android:layout_marginTop="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView_user_icon"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/color_img_register"
                    android:padding="3.5sp"
                    android:tint="@color/white"
                    android:src="@drawable/user_icon32"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/imageView_user_icon"
                    android:background="@color/editTextBg"
                    android:layout_toRightOf="@+id/imageView_user_icon"
                    android:hint="@string/text_username"
                    android:textSize="15sp"
                    android:paddingLeft="20sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_below="@+id/relativeLay1"
                android:layout_width="match_parent"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView_password_icon_S_U"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/color_img_register"
                    android:padding="3.5sp"
                    android:tint="@color/white"
                    android:src="@drawable/pass_user_icon"/>
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:inputType="textPassword"
                    android:layout_alignBottom="@+id/imageView_password_icon_S_U"
                    android:background="@color/editTextBg"
                    android:layout_toRightOf="@+id/imageView_password_icon_S_U"
                    android:hint="@string/text_password"
                    android:textSize="15sp"
                    android:paddingLeft="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3s"
                android:layout_below="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView_repassword_icon_S_U"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/color_img_register"
                    android:padding="3.5sp"
                    android:tint="@color/white"
                    android:src="@drawable/pass_user_icon"/>
                <EditText
                    android:id="@+id/editTextPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:inputType="textPassword"
                    android:layout_alignBottom="@+id/imageView_repassword_icon_S_U"
                    android:background="@color/editTextBg"
                    android:layout_toRightOf="@+id/imageView_repassword_icon_S_U"
                    android:hint="@string/text_re_password"
                    android:textSize="15sp"
                    android:paddingLeft="20sp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_below="@+id/relativeLayout3s"
                android:layout_width="match_parent"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView_email_icon_S_U"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/color_img_register"
                    android:padding="3.5sp"
                    android:tint="@color/white"
                    android:src="@drawable/email_icon"/>
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/imageView_email_icon_S_U"
                    android:background="@color/editTextBg"
                    android:layout_toRightOf="@+id/imageView_email_icon_S_U"
                    android:hint="@string/text_email"
                    android:textSize="15sp"
                    android:paddingLeft="20sp"/>

            </RelativeLayout>
            <CheckBox
                android:id="@+id/checkbox_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="15sp"
                android:text="@string/text_checkbox"
                android:textColor="@color/textColor"/>
            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox_sign"
                android:textColor="@color/white"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:fontFamily="sans-serif"
                android:text="@string/title_sign_up"
                android:background="@color/color_img_register" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>