<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Main_Activity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15sp"
                    android:padding="1dp"
                    android:src="@drawable/login_sign_in_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"

                    android:text="@string/title_login"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_square"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-15dp"
                android:rotation="45"
                android:src="@drawable/square3" />

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative2"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/image_pass_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:src="@drawable/pass_user_icon"
                    android:tint="@color/editColor1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="@+id/image_pass_icon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/image_pass_icon"
                    android:background="@color/editTextBg"
                    android:hint="@string/text_password"
                    android:paddingLeft="15dp"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_square"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/image_user_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/user_icon32"
                    android:tint="@color/editColor1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="@+id/image_user_icon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/image_user_icon"
                    android:background="@color/editTextBg"
                    android:hint="@string/text_username"
                    android:paddingStart="15sp"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/text_checkbox_remember"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:text="@string/text_forgot_pass"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"

                    android:textSize="13sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/buttonSignIn_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative3"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:text="@string/title_sign_in"
                android:textSize="14sp" />
            <Button
                android:id="@+id/button_sign_up1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSignIn_content"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:fontFamily="sans-serif"
                android:text="@string/title_sign_up"
                android:background="@color/colorPrimary" />


            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/button_sign_up1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layerType="software"
                android:src="@drawable/circle" />


            <TextView
                android:id="@+id/tv_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView0"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Or Login With"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:layout_width="64sp"
                    android:layout_height="64dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/facebook_64" />

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/twitter64" />

                <ImageButton
                    android:id="@+id/sign_in_btn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/google_plus_64" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="201dp" />

</RelativeLayout>